Fix logo on small mobile screen

--- a/source/_styles/navigation.styl
+++ b/source/_styles/navigation.styl
@@ -78,5 +78,5 @@ nav
         img
             margin-top 2px
             margin-bottom 2px
-            width 180px
-            height 33px
+            width 160px
+            height 30px
